# Gen-AI---Finance-Reporting-Project

./: .env.example  .gitignore  HOW_IT_WORKS.md  README.md  brief.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: sample_10q_excerpt.txt  sample_prior_transcript.txt  sample_transcript.txt
eval/: cases.json  harness.py  latest.json
src/earning_analyst/: __init__.py  cli.py  config.py  demo.py  engine.py  ingestion.py  llm.py  prompts.py  schema_utils.py  schemas.py
src/earning_analyst/tools/: __init__.py  edgar.py  market_data.py  ratios.py  registry.py
tests/: test_engine_mock.py  test_ingestion.py  test_ratios.py  test_schema_utils.py
