[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earnings-analyst"
version = "0.1.0"
description = "Automated Financial Report & Earnings Analyst - LLM analyst brief generator with function-calling and an eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yash Shelke" }]
dependencies = [
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.6.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
earnings-analyst = "earnings_analyst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
